# raymond

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  SECURITY-REVIEW.md  example-effort-usage.md  go.mod  go.sum  main.py  plan.md  possible-improvements2.md  pyproject.toml  requirements.txt  run_tests_individually.sh
.claude/: settings.local.json
container_dev/: .env.container.example  .gitignore  Dockerfile  PLAN.md  README.md  SCRIPTS.md  build-ray.sh  cbash.bat  entrypoint.sh  pure-ray-container.md  pure-ray.md  rebuild.bat  secrets.bat.example  serve.bat  setup.sh  start-ray.sh  stop-ray.sh
docs/: README.md  REFACTOR.md  agent-framework-comparison.md  ask-file-attachments-design.md  authoring-guide.md  bash-states.md  code-structure.md  configuration-file-design.md  console-output.md  copilot-backend.md  cross-workflow-design.md  daemon-server.md  debug-mode.md  design-decisions.md  diagram.md  graceful-shutdown.md  implementation-assumptions.md  implementation-plan.md  input-file-attachments-design.md  lint.md  multi-backend-design.md  orchestration-design.md  pi-backend-rationale.md  pi-backend.md  reset-stack-retention.md  review-findings-2.md  review-findings-3.md  review-findings-4.md  review-findings.md  sample-workflows.md  scenario.md  serve-run-pool.md  serve-shutdown-signals.md  skill-packaging.md  terminal-titlebar.md  workflow-protocol.md  wsl.md  yaml-manifest-workflow.md  yaml-workflows.md
scripts/: hourly-claude.sh  line-counts.sh
src/: cc_wrap.py  cli.py  config.py  console.py  main.py  orchestrator.py  orchestrator_old.py  (+6 more)
(+324 files in other folders)
